--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>My Project</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>hello</h2>
-    <h2>hello</h2>
+    <h1>Udit Pilania</h1>
+    <h2>About Me:</h2>
+    <h3><a href="Expandingcards/index.html">My favourite food</a></h2>
     <script src="script.js"></script>
 </body>
 </html> 
