--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                       I have a Bachelor of Technology degree from the Jaypee University of Information and Technology (JUIT) Waknaghat.
                     </p>
                     <p class="lead">
-                      I work at Thales, India as a Software Engineer, where I worked on devloping new features, Frontend and CI-CD pipeline using Jenkins. Aside from work, I am also a photographer, open-source enthusiast and have created projects that you can check on GitHub.
+                      I work at Thales, India as a Software Engineer, where I worked on devloping features, Frontend and CI-CD pipeline using Jenkins. Aside from work, I am also a photographer, open-source enthusiast and have created projects that you can check on GitHub.
                     </p>
                     <p class="lead">
                       My interests lie in solving problems related to website development and large-scale distributed software systems.
